--- a/app/globals.css
+++ b/app/globals.css
@@ -59,6 +59,13 @@ h2 {
     margin: 8px 0;
     width: 100%;
   }
+
+  .multiple-performers {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 8px 0;
+  }
   .agenda-title {
     white-space: nowrap;
     margin: 0 12px 8px 0;
