--- a/app/globals.css
+++ b/app/globals.css
@@ -16,6 +16,10 @@ h2 {
   font-size: 1rem;
 }
 
+li {
+  margin-bottom: 8px;
+}
+
 .heading {
   white-space: nowrap;
   font-size: clamp(1rem, 1vw, 2rem);
